kiet update